javaconfig-dependency-injection.html has h2 element

--- a/contents/OEBPS/Text/essentials/javaconfig-dependency-injection/javaconfig-dependency-injection.html
+++ b/contents/OEBPS/Text/essentials/javaconfig-dependency-injection/javaconfig-dependency-injection.html
@@ -209,6 +209,7 @@ This includes plugging in repository implementations that use a JDBC
 data source to access a relational database.</p>
 <p>The following diagram illustrates the parts of the rewards application
 you will configure and how they should be wired together:</p>
+<h2 id="figure-1-rewards-application-configuration-dependencies">Figure 1 Rewards Application Configuration</h2>
 <p><img src="./images/reward-network-system-diagram.png" alt="Rewards application Config Dependencies" class="figure" /></p>
 <p><strong>Figure 1 Rewards Application Dependencies</strong></p>
 <p>It is split into two categories:
